sidebar: fix alignment of items when collapsed

--- a/src/styles/sidebar/sidebar-link.css
+++ b/src/styles/sidebar/sidebar-link.css
@@ -18,6 +18,7 @@
   outline: none;
   text-align: left;
   cursor: pointer;
+  width: 100%;
 }
 
 .link svg {
